[package]
name = "cuckoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "*" }
tracing-subscriber = { version = "*" }
zmq = { version = "0.10.0" }
serde = { version = "*", features = ["derive", "rc"] }
serde_json = { version = "*" }
anyhow = { version = "*" }
crossbeam = { version = "*" }
tokio = { version = "*", features=["full"]}
rand = { version = "*" }

[profile.release]
debug = true
